--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -155,7 +155,8 @@
     }
 
     @media #{$screen-xlg} {
-      right: -20px;
+      right: 30px;
+      bottom: -8%;
     }
   }
 
